# computer-use-agent

./: README.md  langgraph.json  pyproject.toml
plan/: architecture.md  implementation_steps.md
src/agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py  vision_utils.py
src/agent/cua/: actions.py  client.py  sandbox.py
tests/: example_usage.py  test_final_result.py  test_graph_completion.py  test_improved_agent.py  test_output_state.py  test_sandbox_reuse.py
